# try2

./: CMakeLists.txt  CsvReader.cpp  CsvReader.h  Socket.h
Client/: Client.cpp  Client.h  main.cpp
Server/: Classifiable.h  Classifier.h  Flower.cpp  Flower.h  Server.cpp  Server.h  main.cpp
